--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-loading-overlay": "^6.0.6",
+    "vue-router": "^4.4.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
