css transition sidebar

--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
+    "feather-icons": "^4.29.2",
     "vue": "^3.5.12",
     "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.4.5",
