--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
     "feather-icons": "^4.29.2",
+    "firebase": "^11.0.1",
     "vue": "^3.5.12",
     "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.4.5",
