--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "dlh-cimahi-frontend": "file:",
     "vue": "^3.5.12",
     "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.4.5",
