--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
+    "datatables.net": "^2.1.8",
+    "dlh-cimahi-frontend": "file:",
     "feather-icons": "^4.29.2",
     "firebase": "^11.0.1",
+    "jquery": "^3.7.1",
     "vue": "^3.5.12",
     "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.4.5",
