--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "feather-icons": "^4.29.2",
     "firebase": "^11.0.1",
     "jquery": "^3.7.1",
+    "sweetalert2": "^11.14.4",
     "vue": "^3.5.12",
     "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.4.5",
