--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "firebase": "^11.0.1",
     "jquery": "^3.7.1",
     "sweetalert2": "^11.14.4",
+    "vee-validate": "^4.14.6",
     "vue": "^3.5.12",
     "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.4.5",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
