add captcha login

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vee-validate": "^4.14.6",
     "vue": "^3.5.12",
     "vue-loading-overlay": "^6.0.6",
+    "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.4.5",
     "vuex": "^4.0.2",
     "yup": "^1.4.0"
