--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^11.0.1",
     "jenesius-vue-modal": "^1.11.9",
     "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "sweetalert2": "^11.14.4",
     "vee-validate": "^4.14.6",
     "vue": "^3.5.12",
