--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.3.1",
+    "@ckeditor/ckeditor5-vue": "^7.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@tinymce/tinymce-vue": "^6.1.0",
     "axios": "^1.7.7",
+    "ckeditor5": "^43.3.1",
     "datatables.net": "^2.1.8",
     "dlh-cimahi-frontend": "file:",
     "feather-icons": "^4.29.2",
