--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@tinymce/tinymce-vue": "^6.1.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "ckeditor5": "^43.3.1",
     "datatables.net": "^2.1.8",
     "dlh-cimahi-frontend": "file:",
