--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html2pdf.js": "^0.10.2",
     "jenesius-vue-modal": "^1.11.9",
     "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "sweetalert2": "^11.14.4",
     "vee-validate": "^4.14.6",
