--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "chart": "^0.1.2",
     "chart.js": "^4.4.7",
     "core-js": "^3.8.3",
