--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^4.3.0",
     "axios": "^1.7.9",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
     "chart": "^0.1.2",
     "chart.js": "^4.4.7",
     "core-js": "^3.8.3",
+    "echarts": "^5.6.0",
     "jquery": "^3.7.1",
     "jvectormap": "^2.0.4",
     "vue": "^3.2.13",
-    "vue-chartjs": "^5.3.2"
+    "vue-chartjs": "^5.3.2",
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
